objects/Shift.object
<CustomObject>
    <fields>
        <fullName>Overtime_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to hold who approved the Overtime Shift</description>
        <label>Overtime Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overtime_Reason__c</fullName>
        <description>Text field used to capture the reason the Overtime was needed</description>
        <inlineHelpText>Enter the reason the Overtime Shift was needed</inlineHelpText>
        <label>Overtime Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Service_Territory__c</fullName>
        <description>Formula field to get name of Primary Service Territory of the Service Resource. Used in Shift Schedule list view.</description>
        <formula>ServiceResource.Primary_Service_Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to get name of Primary Service Territory of the Service Resource. Used in Shift Schedule list view.</inlineHelpText>
        <label>Primary Service Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Service_Territory_Member__c</fullName>
        <label>Secondary Service Territory Member</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Service_Territory__c</fullName>
        <description>Controls the creation, edit, and deletion of Service Territory Membership with Type S via flow.</description>
        <inlineHelpText>Picklist to allow a Service Resource to be assigned Service Appointments from a different Service Territory. May be left as None.</inlineHelpText>
        <label>Secondary Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Territories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <description>Populates the corresponding Service Region&apos;s address to the Service Territory Member record via flow. Address on Service Territory Member is used for the Max Distance Work Rule.</description>
        <inlineHelpText>Used as the centerpoint to determine how far a technician can travel.</inlineHelpText>
        <label>Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift_Primary_Service_Territory__c</fullName>
        <description>Picklist to indicate which Service Territory the Shift is for. Used for List View Purposes and no functionality.</description>
        <inlineHelpText>Picklist to indicate which Service Territory the Shift is for. Used for List View Purposes and no functionality.</inlineHelpText>
        <label>Shift Primary Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Watseka</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Shifts</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>JobProfile</columns>
        <columns>ServiceResource</columns>
        <columns>ServiceTerritory</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RecordsetFilterCriteria</columns>
        <columns>IsNonStandard</columns>
        <columns>BackgroundColor</columns>
        <filterScope>Everything</filterScope>
        <label>All Shifts</label>
    </listViews>
    <listViews>
        <fullName>Champaign_Go_Live_Shifts_Week_of_10_3</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Champaign</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/8/2022 12:00 AM</value>
        </filters>
        <label>Champaign Go-Live Shifts Week of 10/1</label>
    </listViews>
    <listViews>
        <fullName>Champaign_Shifts</fullName>
        <columns>Name</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Champaign</value>
        </filters>
        <label>Champaign Shifts</label>
    </listViews>
    <listViews>
        <fullName>Chicagoland_Central_Shifts_Week_of_10_19</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/19/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/30/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Chicagoland Central</value>
        </filters>
        <label>Chicagoland Central Shifts Week of 10/19</label>
    </listViews>
    <listViews>
        <fullName>Chicagoland_North_Shifts_Week_of_10_19</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/19/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/30/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Chicagoland North</value>
        </filters>
        <label>Chicagoland North Shifts Week of 10/19</label>
    </listViews>
    <listViews>
        <fullName>Chicagoland_South_Shifts_Week_of_10_19</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/19/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/30/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Chicagoland South</value>
        </filters>
        <label>Chicagoland South Shifts Week of 10/19</label>
    </listViews>
    <listViews>
        <fullName>Colinsville_Go_Live_Shifts_Week_of_10_3</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/8/2022 12:00 AM</value>
        </filters>
        <label>Collinsville Go-Live Shifts Week of 10/1</label>
    </listViews>
    <listViews>
        <fullName>Collinsville_Shifts</fullName>
        <columns>Name</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>JobProfile</columns>
        <columns>ServiceResource</columns>
        <columns>ServiceTerritory</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RecordsetFilterCriteria</columns>
        <columns>IsNonStandard</columns>
        <columns>BackgroundColor</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <label>Collinsville Shifts</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Chicagoland_South_Shifts_Week_of_10_19</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/19/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/30/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>Primary_Service_Territory__c</field>
            <operation>contains</operation>
            <value>Tinley</value>
        </filters>
        <label>Chicagoland Tinley Shifts Week of 10/19</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Collinsville_Shifts</fullName>
        <columns>Name</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>JobProfile</columns>
        <columns>ServiceResource</columns>
        <columns>ServiceTerritory</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RecordsetFilterCriteria</columns>
        <columns>IsNonStandard</columns>
        <columns>BackgroundColor</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Collinsville</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Copy of Collinsville Shifts</label>
    </listViews>
    <listViews>
        <fullName>My_Shifts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Shifts</label>
    </listViews>
    <listViews>
        <fullName>Peoria_Go_Live_Shifts_Week_of_10_3</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Peoria</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/8/2022 12:00 AM</value>
        </filters>
        <label>Peoria Go-Live Shifts Week of 10/1</label>
    </listViews>
    <listViews>
        <fullName>Rockford_Go_Live_Shifts_Week_of_10_3</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Rockford</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>StartTime</field>
            <operation>lessThan</operation>
            <value>10/8/2022 12:00 AM</value>
        </filters>
        <label>Rockford Go-Live Shifts Week of 10/1</label>
    </listViews>
    <listViews>
        <fullName>Rockford_Shifts</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>ServiceResource</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>JobProfile</columns>
        <columns>RecordsetFilterCriteria</columns>
        <columns>IsNonStandard</columns>
        <columns>BackgroundColor</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Rockford</value>
        </filters>
        <label>Rockford Shifts</label>
    </listViews>
    <listViews>
        <fullName>Springfield_Go_Live_Shifts</fullName>
        <columns>Name</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Shift_Primary_Service_Territory__c</columns>
        <columns>Status</columns>
        <columns>ServiceResource</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shift_Primary_Service_Territory__c</field>
            <operation>equals</operation>
            <value>Springfield</value>
        </filters>
        <label>Springfield Go-Live Shifts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Confirmed_Shifts_Have_Service_Region</fullName>
        <active>false</active>
        <description>Check to verify that Confirmed shifts have the Service Region populated.</description>
        <errorConditionFormula>ISPICKVAL(Status,&apos;Confirmed&apos;) &amp;&amp; ISPICKVAL(Service_Region__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Confirmed Shifts must have Service Region populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overtime_Approver_Permission_Set_Needed</fullName>
        <active>true</active>
        <description>Validation rule to check is the user creating the Overtime Shift has the permission to do it</description>
        <errorConditionFormula>AND(ISPICKVAL( TimeSlotType , &quot;Extended&quot;),  NOT(($Permission.Field_Service_Overtime_Approver)))</errorConditionFormula>
        <errorDisplayField>TimeSlotType</errorDisplayField>
        <errorMessage>You are not approved to create an Overtime Shift. Please contact your Salesforce Admin with further questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overtime_Reason_Needed</fullName>
        <active>true</active>
        <description>Overtime Reason needs to be filled out if an overtime shift is selected</description>
        <errorConditionFormula>AND( ISPICKVAL(TimeSlotType, &quot;Extended&quot;), ISBLANK(  Overtime_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Overtime_Reason__c</errorDisplayField>
        <errorMessage>Overtime Reason must be filled out in order to create an Overtime Shift</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Secondary_Same_as_Primary_STM</fullName>
        <active>true</active>
        <description>Checks to see if the Primary and Secondary Territory match.</description>
        <errorConditionFormula>Text(Secondary_Service_Territory__c)=Primary_Service_Territory__c</errorConditionFormula>
        <errorDisplayField>Secondary_Service_Territory__c</errorDisplayField>
        <errorMessage>Service Resource is already assigned to this Territory as their Primary Territory. Please leave this field blank, select a different Secondary Territory, or change their Primary Service Territory.</errorMessage>
    </validationRules>
</CustomObject>